Apple Frameworks: honor SYSTEM target property

Fixes: #24109